# CudaSolver

./: CMakeLists.txt
include/: ObservableValue.hpp  cuda_solver.hpp  cuda_utils.cuh  utils.hpp
src/: cuda_solver.cpp  cuda_solver.cu
